Add post method with body request and add unit tests for it
